[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://TileMap.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Ladder.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Building.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Gladiator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Level01.gd" type="Script" id=6]
[ext_resource path="res://Graphics/background1-720.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://ralf.wav" type="AudioStream" id=10]

[node name="Level01" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Stats" parent="." instance=ExtResource( 9 )]
position = Vector2( 653.458, 359.957 )
scale = Vector2( 0.4, 0.4 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.4, 0.4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 140, 140 )
format = 1
tile_data = PoolIntArray( -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, 0, 1, 0, 22, 1, 0, 65536, 1, 0, 65558, 1, 0, 131072, 1, 0, 131094, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 262144, 1, 0, 262166, 1, 0, 327680, 1, 0, 327702, 1, 0, 393216, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 458752, 1, 0, 458774, 1, 0, 524288, 1, 0, 524310, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 655360, 1, 0, 655382, 1, 0, 720896, 1, 0, 720918, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0 )

[node name="Labbers" type="Node2D" parent="."]
position = Vector2( 833.442, 619.708 )
scale = Vector2( 0.5, 0.5 )

[node name="Lad01" parent="Labbers" instance=ExtResource( 3 )]
position = Vector2( -594.033, -149.055 )

[node name="Lab02" parent="Labbers" instance=ExtResource( 3 )]
position = Vector2( 189.928, -149.894 )

[node name="Lad03" parent="Labbers" instance=ExtResource( 3 )]
position = Vector2( -368.58, -823.984 )

[node name="Lad04" parent="Labbers" instance=ExtResource( 3 )]
position = Vector2( 303.258, -822.406 )

[node name="Lad05" parent="Labbers" instance=ExtResource( 3 )]
position = Vector2( -934.969, -485.367 )

[node name="Buildings" type="Node2D" parent="."]

[node name="Build01" parent="Buildings" instance=ExtResource( 4 )]
position = Vector2( 1150, 617.71 )
scale = Vector2( 0.45, 0.45 )

[node name="Build02" parent="Buildings" instance=ExtResource( 4 )]
position = Vector2( 814.353, 281.396 )
scale = Vector2( 0.45, 0.45 )

[node name="Build03" parent="Buildings" instance=ExtResource( 4 )]
position = Vector2( 477.702, 113.096 )
scale = Vector2( 0.45, 0.45 )

[node name="Coins" type="Node2D" parent="."]
position = Vector2( 271.915, 639.555 )

[node name="Coin01" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 395, 13.473 )

[node name="Coin02" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 455, 13.473 )

[node name="Coin03" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 515, 13.473 )

[node name="Coin04" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( -79.5703, -321.952 )

[node name="Coin05" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( -30.2329, -321.891 )

[node name="Coin06" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 18.331, -321.742 )

[node name="Coin07" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 473.028, -489.934 )

[node name="Coin08" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 529.923, -489.635 )

[node name="Coin09" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 584.807, -489.785 )

[node name="Coin10" parent="Coins" instance=ExtResource( 8 )]
position = Vector2( 641.967, -489.785 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 124.453, 648.183 )

[node name="Gladiator" parent="." instance=ExtResource( 5 )]
position = Vector2( 132.717, 115.68 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
